# polymarket-scraper-data

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claude.md  docker-compose.yml  pyproject.toml  roadmap.md
schema/: 01_core.sql  02_time_series.sql  03_resolution.sql  04_category_slug_volume.sql
scripts/: check_setup.py  init_db.py  reset_database.sh
src/: clob_api.py  constants.py  db.py  feature_pipeline.py  gamma_api.py  historical_worker.py  markets.py  model_pipeline.py  orderbook_snapshot_worker.py  price_worker.py  redis_client.py
tests/: test_etapa1.py  test_etapa2.py  test_etapa3.py  test_etapa4.py  test_etapa5.py
