[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "py-clob-client>=0.28.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.8.0",
    "joblib>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
